src/app/globals.css
@import "tailwindcss";

@theme inline {
  --color-red: #ed0505;
  --color-skyblue-light: #f4f5f7;
  --color-light-blue: #99a1b9;
  --color-skylight: #f8ffff;
  --color-slate: #1d2f64;
  --color-dark-slate: #020303;
  --font-jetbrains: var(--font-jetbrains-mono);
  --font-inter: var(--font-inter);
  --shadow-custom: 7px 7px 24.4px 0px #00000030;
  --breakpoint-xs: 380px;
}
@utility container {
  @apply mx-auto max-w-none 2xl:max-w-360 px-4 md:px-10! lg:px-8;
}
@layer base {
  body {
    @apply font-inter;
  }
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply font-jetbrains  leading-[120%] tracking-[-1%];
  }
  button {
    @apply cursor-pointer;
  }
}
@layer components {
  .swiper-pagination-bullet {
    @apply w-3 h-3 bg-gray-400 opacity-100;
  }

  .swiper-pagination-bullet-active {
    @apply bg-purple-600! w-6 rounded-full;
  }
  .heading-1 {
    @apply text-[40px] md:text-[56px];
  }
  .heading-2 {
    @apply text-[36px] sm:text-[40px] md:text-5xl;
  }
  .heading-3 {
    @apply text-[32px] sm:text-4xl md:text-[40px];
  }
  .heading-4 {
    @apply text-2xl sm:text-2xl md:text-[32px]  leading-[130%];
  }
  .heading-5 {
    @apply text-xl md:text-2xl leading-[140%];
  }
  .heading-5-bold {
    @apply text-xl md:text-2xl  leading-[140%] font-bold;
  }
  .heading-6 {
    @apply text-lg md:text-xl leading-[140%];
  }
  .body-text {
    @apply text-base md:text-lg lg:text-xl;
  }
}
@custom-variant hover (&:hover);

